--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,31 +22,32 @@ services:
         networks:
             - sail
         depends_on:
-            - pgsql
+            - mysql
             - redis
             - meilisearch
             - mailpit
             - selenium
-    pgsql:
-        image: 'postgres:latest'
+    mysql:
+        image: 'mysql:8.0'
         ports:
-            - '${FORWARD_DB_PORT:-5432}:5432'
+            - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
-            POSTGRES_DB: '${DB_DATABASE}'
-            POSTGRES_USER: '${DB_USERNAME}'
-            POSTGRES_PASSWORD: '${DB_PASSWORD}'
-            POSTGRES_HOST_AUTH_METHOD: 'trust'  # Opcional, para desarrollo
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
         volumes:
-            - 'sail-pgsql:/var/lib/postgresql/data'
+            - 'sail-mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
         healthcheck:
             test:
                 - CMD
-                - pg_isready
-                - '-U'
-                - '${DB_USERNAME}'
+                - mysqladmin
+                - ping
+                - '-h'
+                - 'localhost'
             retries: 3
             timeout: 5s
     redis:
@@ -102,7 +103,7 @@ networks:
     sail:
         driver: bridge
 volumes:
-    sail-pgsql:
+    sail-mysql:
         driver: local
     sail-redis:
         driver: local
